--- a/src/app/leonardo/spreadsheetConfigurator/spreadsheetConfigurator.component.html
+++ b/src/app/leonardo/spreadsheetConfigurator/spreadsheetConfigurator.component.html
@@ -20,7 +20,7 @@
                         <input class="form-control" id="{{element.id}}" name="{{element.id}}" type="{{element.type}}" [(ngModel)]="inpConfigObject[section.name][element['id']]">
                     </div>
                     <label *ngIf="element.type == 'dropdown'" class="col-sm-6">{{element.name}}</label>
-                    <div class="col-sm-4 col-sm-offset-1" *ngIf="element.type == 'dropdown'" (change)="changeType($event)">
+                    <div class="col-sm-4 col-sm-offset-1" *ngIf="element.type == 'dropdown'" (change)="changeJson($event)">
                         <select class="form-control" id="{{element.id}}" name="{{element.id}}" [(ngModel)]="inpConfigObject[section.name][element['id']]">
                             <option *ngFor="let option of element.values" value="{{option}}">
                                     {{option}}
@@ -36,7 +36,7 @@
                 <div class="text-center col-sm-4" *ngIf="section.name == 'initialConfig'">
                     <button type="submit" class=" btn btn-primary pull-right" (click)="updateData()"> Get State </button>
                 </div>
-                <div class="text-center col-sm-4 col-sm-offset-4" *ngIf="section.name == 'initialConfig'" (click)="setConfigJSON(section)" >
+                <div class="text-center col-sm-4 col-sm-offset-4" *ngIf="section.name == 'initialConfig'" (click)="setExtractorOutput()" >
                     <button type="submit" class=" btn btn-primary pull-right"> Set State </button>
                 </div>
                 
